--- a/order.html
+++ b/order.html
@@ -6,8 +6,8 @@
     <!-- reset css -->
     <link rel="stylesheet" href="./css/reset.css">
     <!-- add css -->
-    <link rel="stylesheet" href="./css/cart-style.css">
-    <title>Cart</title>
+    <link rel="stylesheet" href="./css/order-style.css">
+    <title>Order</title>
 </head>
 <body >
     <!-- header -->
@@ -72,95 +72,102 @@
             </div>
         </div>
      </header>
-    <!-- cart -->
-    <div class="cart">
+    <!-- order-->
+    <div class="order">
         <div class="container">
-            <div class="cart-body">
-                <!-- cart top container -->
-                <div class="cart-top-progress">
+            <div class="order-body">
+                <!-- order top container -->
+                <div class="order-top-progress">
                     <div class="progress"></div>
                     <p class="active"><img src="./icons/cart-shopping-solid.svg" alt="cart" class="cart"></p>
-                    <p><img src="./icons/location-dot-solid.svg" alt="location" class="delivery"></p>
+                    <p class="active"><img src="./icons/location-dot-solid.svg" alt="location" class="delivery"></p>
                     <p><img src="./icons/credit-card-regular.svg" alt="credit-card" class="pay"></p>
                 </div>
-                <div class="cart-content">
+                <div class="order-content">
                     <!-- left content -->
-                    <div class="product-detail-info">
-                            <table class="left-table">
+                    <div class="order-detail-info">
+                            <h3 class="title">Vui long chon dia chi giao hang</h3>
+                            <a href="" class="login">
+                                <img src="./icons/login.svg" alt="login">
+                                <p>Dang nhap (Neu ban da co tai khoan cua IVY)</p>
+                            </a>
+                            <input class="just-buy" type="radio" name="select" value="just-buy">Khach le (Neu ban khong muon luu lai thong tin)</input> <br>
+                            <input class="register" type="radio" name="select" value="register">Dang ly (Tao moi tai khoan voi thong tin ben duoi)</input>
+                            <form action="" method="post">
+                               <table class="customer-address">
+                                <tr class="row row-1">
+                                    <td>Ho ten</td>
+                                    <td>Dien thoai</td>
+                                </tr>
+                                <tr>
+                                    <td><input type="text" placeholder="Enter your name"></td>
+                                    <td><input type="tel" placeholder="Enter your phone number"></td>
+                                </tr>
+                                <tr class="row row-2">
+                                    <td>Tinh TP</td>
+                                    <td>Quan huyen</td>
+                                </tr>
+                                <tr>
+                                    <td><input type="text" placeholder="Nhap vao ten tinh TP"></td>
+                                    <td><input type="text" placeholder="Nhap vao ten quan huyen"></td>
+                                </tr>
+                                <tr class="row row-4">
+                                    <td>Phuong xa</td>
+                                </tr>
+                                <tr>
+                                    <td colspan="2"><input type="text" placeholder="Nhap vao ten phuong xa"></td>
+                                </tr>
+                                <tr class="row row-4">
+                                    <td>Dia chi</td>
+                                </tr>
+                                <tr>
+                                    <td colspan="2"><input type="text" placeholder="Nhap vao ten pho, so nha..."></td>
+                                </tr>
+                               </table>
+                            </form>
+                            <div class="content-bottom">
+                                <a href=""><img src="./icons/back.svg" alt="back arrow">Quay lai gio hang</a>
+                                <button type="submit">THANH TOAN VA GIAO HANG</button>
+                            </div>
+                        </div>
+                    <!-- right content -->
+                    <div class="order-price">
+                        <div class="order-price-table">
+                            <table>
                                 <thead>
                                     <tr>
-                                        <th class="product-img-column">San Pham</th>
-                                        <th class="product-name-column">Ten san pham</th>
-                                        <th class="product-color-column">Mau</th>
-                                        <th class="product-size-column">Size</th>
-                                        <th class="product-amount-column">SL</th>
-                                        <th class="product-price-column">Thanh tien</th>
-                                        <th class="delete-product-column">Xoa</th>
+                                        <th class="product-name">Ten san pham</th>
+                                        <th class="product-decount">Giam gia</th>
+                                        <th class="product-amount">So luong</th>
+                                        <th class="product-price">Thanh tien</th>
                                     </tr>
                                 </thead>
                                 <tbody>
                                     <tr>
-                                        <td class="image-column">
-                                            <img src="./images/avatar4.png" alt="">
+                                        <td>
+                                            <span class="product-name-detail">Ao polo ke ngang MS 1092</span>  
+                                            <span class="product-size">M</span> / 
+                                            <span class="product-style">Ke bac ha</span>  
+                                            <span class="product-code">MS 1092</span>  
+                                            <span class="product-price vnd">690.000</span>  
+    
                                         </td>
-                                        <td class="info-column">
-                                            <p>Quan soc bo den MS 0897</p>
-                                            <p class="vnd">265.000</p>
-                                            <p>-30%</p>
-                                        </td>
-                                        <td class="color-column">
-                                            <div></div>
-                                        </td>
-                                        <td class="size-column"><p>38</p></td>
-                                        <td class="amount-column">
-                                            <input type="number" value="">
-                                        </td>
-                                        <td class="price-column">
-                                        <p class="vnd"> 639.000</p>
-                                        </td>
-                                        <td class="cancel-column">
-                                            <p>x</p>
-                                        </td>
+                                        <td>-30%</td>
+                                        <td>1</td>
+                                        <td><span  class="vnd">438.000</span></td>
                                     </tr>
                                 </tbody>
+                                <tfoot>
+                                    <tr>
+                                        <td>Tong tien hang <span class="vnd">690.000</span></td>
+                                    </tr>  
+                                    <tr>
+                                        <td colspan="3">Tam tinh</td>
+                                        
+                                        <td><p class="vnd">483.000</p></td>
+                                    </tr>
+                                </tfoot>
                             </table>
-                    </div>
-                    <!-- right content -->
-                    <div class="price-count">
-                        <h2 class="title">TONG TIEN GIO HANG</h2>
-                        <table>
-                            <tbody>
-                                <tr>
-                                    <td>TONG SAN PHAM</td>
-                                    <td>3</td>
-                                </tr>
-                                <tr>
-                                    <td>TONG TIEN HANG</td>
-                                    <td><p  class="vnd">2.678.000 </p></td>
-                                </tr>
-                                <tr>
-                                    <td>THANH TIEN</td>
-                                    <td><p  class="vnd">2.678.000</p></td>
-                                </tr>
-                            </tbody>
-                            <tfoot>
-                                <tr>
-                                    <td>TAM TINH</td>
-                                    <td><p  class="vnd">2.678.000 </p></td>
-                                </tr>
-                            </tfoot>
-                        </table>
-                        <div class="freeship-desc">
-                            <p>Ban se duoc mien phi ship khi don hang cua ban co tong gia tri tren 2 000 000 vnd</p>
-                            <p>Mua them <span>131.000</span>vnd de duoc mien phi ship</p>
-                        </div>
-                        <div class="btn-cash">
-                            <button class="btn btn1" type="button">TIEP TUC MUA SAM</button>
-                            <button class="btn btn2" type="button">THANH TOAN</button>
-                        </div>
-                        <div class="login-desc">
-                            <h3>TAI KHOAN IVY</h3>
-                            <p>Hay <a href="">Dang Nhap</a> tai khoan cua ban de tich diem thanh vien</p>
                         </div>
                     </div>
                 </div>
@@ -204,6 +211,6 @@
             </div>
         </div>
     </footer>
-    <script src="./javascript/cartcontent.js"></script>
+    <script src="./javascript/order.js"></script>
 </body>
 </html>
